--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>PokedexAngular</title>
+  <title>Full Pokédex using Angular</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="./assets/images/pokeball.jpg">
 </head>
-<body>
+<body
+  [ngStyle]="{'background-color':'white'}"
+  style="justify-content:space-evenly;text-align: center; background-color: white;">
   <app-root></app-root>
 </body>
 </html>
