official img on pokedex. minor updates

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Full Pokédex using Angular</title>
+  <title>Pokédex Angular</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="./assets/images/pokeball.jpg">
@@ -14,5 +14,6 @@
   [ngStyle]="{'background-color':'white'}"
   style="justify-content:space-evenly;text-align: center; background-color: white;" class="mat-typography">
   <app-root></app-root>
+  <!-- see app-routing.module.ts -->
 </body>
 </html>
